fixup old link on main page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: robertlongbottom.com
 <div id="home">
 
 <p>This is the personal homepage of <a href="http://robertlongbottom.com">Robert Longbottom</a> a  
-	<a href="/code">software</a> developer, <a href="/electronics">electronics</a> enthusiast, 
+	software developer, <a href="/electronics">electronics</a> enthusiast, 
 	<a href="http://swindon.hackspace.org.uk">hacker</a> and amateur <a href="/astronomy">astronomer</a>.</p>
 
 <p>Social media links :
