--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: robertlongbottom.com
 <div id="about">
 
 <p>This website was generated using <a href="http://jekyllrb.com/">Jekyll</a>
-	using a css template from <a href="http://www.freecsstemplates.org/">FreeCSSTemplates.org</a>
+	and styled with <a href="http://getbootstrap.com/">Boostrap</a>
 	and is hosted on <a href="http://github.com">GitHub</a></p>
 
 </div>
