update hackspace link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: robertlongbottom.com
 
 <p>This is the personal homepage of <a href="http://robertlongbottom.com">Robert Longbottom</a> a  
 	software developer, <a href="/electronics">electronics</a> enthusiast, 
-	<a href="http://swindon.hackspace.org.uk">hacker</a> (in the good sense of the word)
+	<a href="http://www.swindon-makerspace.org/">maker</a>
 	and amateur <a href="/astronomy">astronomer</a>.</p>
 
 <p>Social media links :
